[package]
name = "wgpu-test"
authors = ["Vincent Junge <kvark@mozilla.com>"]
edition = "2018"
version = "0.0.1"


[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
winit = { version = "0.22", features = ["web-sys"]}
futures = "0.3"
bytemuck = "1.2"
image = "0.23"
strum = "0.18.0"
strum_macros = "0.18.0"
hecs = "0.2" # maybe bevy_hecs would be useful for Added, Mutated


[build-dependencies]
shaderc = "0.6"
walkdir = "2"
guillotiere = "0.5"
image = "0.23"